<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestAdvice"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:padding="2dp"
        android:layout_margin="2dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/light_emoji"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:paddingLeft="8dp"
            android:src="@drawable/light" />

        <TextView
            android:layout_toRightOf="@id/light_emoji"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/training_advice"
            android:textStyle="bold"
            android:freezesText="true"
            android:layout_margin="2dp"
            android:gravity="center_vertical"
            android:foregroundGravity="center_horizontal"
            android:textSize="22sp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0.4"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:textSize="16sp"
        android:freezesText="true"
        android:text="@string/training_advice_activity_description"/>

    <EditText
        android:id="@+id/name_edit_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:freezesText="true"
        android:hint="@string/name"
        android:layout_margin="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btnMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/btnWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
    </RadioGroup>

    <EditText
        android:id="@+id/issue_edit_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:freezesText="true"
        android:hint="@string/issue"
        android:layout_margin="8dp"/>

    <EditText

        android:id="@+id/goal_edit_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:freezesText="true"
        android:layout_margin="8dp"
        android:hint="@string/goal" />

    <EditText
        android:id="@+id/description_edit_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:freezesText="true"
        android:gravity="bottom"
        android:hint="@string/description_basic_information" />

    <Button
        android:id="@+id/send_to_firebase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:onClick="sendToFirebase"
        android:text="@string/submit"
        android:freezesText="true"
        android:layout_gravity="center"/>

</LinearLayout>