<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutUsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="255dp"
                android:layout_height="159dp"
                android:layout_gravity="center"
                android:src="@drawable/coach_cartoon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:gravity="center"
                android:paddingTop="12dp"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/introduction"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8sp"
                android:text="@string/contact_us"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ruoxi_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/ruoxi_feng_rf2722_tc_columbia_edu"
                    android:layout_marginRight="15dp"
                    android:textSize="13sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:onClick="emailRuoxi"
                    android:text="@string/contact"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/qianzi_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/qianzi_zhang_qz2175_tc_columbia_edu"
                    android:textSize="13sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:onClick="emailQianzi"
                    android:text="@string/contact"
                    android:textSize="10sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8sp"
                android:text="@string/office"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="16dp"
                android:freezesText="true"
                android:text="@string/location_dodge_physical_fitness_center_naddress_3030_broadway_new_york_ny_10027_n"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>