<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CoachActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gray">

        <ImageView
            android:id="@+id/jie_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/coach1" />

        <TextView
            android:id="@+id/jie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/jie_photo"
            android:text="@string/jie_xiao"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/jie_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jie_name"
            android:layout_toRightOf="@+id/jie_photo"
            android:text="@string/email_xiao"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jie_email"
            android:layout_toRightOf="@+id/jie_photo"
            android:text="@string/jieinfo"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:onClick="startActivity1"
        android:text="@string/more"
        android:textSize="16sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gray">

        <ImageView
            android:id="@+id/wu_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/coach2" />

        <TextView
            android:id="@+id/wu_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/wu_photo"
            android:text="@string/chibing"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wu_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wu_name"
            android:layout_toRightOf="@+id/wu_photo"
            android:text="@string/email_chi"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/wu_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wu_email"
            android:layout_toRightOf="@+id/wu_photo"
            android:text="@string/chiinfo"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:onClick="startActivity2"
        android:text="@string/more"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gray">

        <ImageView
            android:id="@+id/xinghua_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/coach3" />

        <TextView
            android:id="@+id/xinghua_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/xinghua_photo"
            android:text="@string/singhua"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/xinghua_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/xinghua_name"
            android:layout_toRightOf="@+id/xinghua_photo"
            android:text="@string/email_sing"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/xinghua_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/xinghua_email"
            android:layout_toRightOf="@+id/xinghua_photo"
            android:text="@string/singinfo"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:onClick="startActivity3"
        android:text="@string/more"
        android:textSize="16sp" />

</LinearLayout>