<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_tournament"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/country"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/france" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date1"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/country"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tournament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_toRightOf="@+id/country"
            android:text="@string/tour1"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tournament"
            android:layout_toRightOf="@+id/country"
            android:text="@string/location1"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location"
            android:layout_toRightOf="@+id/country"
            android:text="@string/buy_ticket"
            android:textSize="10sp"
            android:textColor="@color/black" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>