<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    tools:context=".JieXiaoActivity">

    <ImageView
        android:id="@+id/jie_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/coach1" />

    <TextView
        android:id="@+id/xinghua_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:text="@string/jie_xiao_info"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="370dp">

    <TextView
        android:id="@+id/xinghua_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/jie_xiao_full_intro"
        android:textColor="@color/black"
        android:textSize="18sp" />

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gray"
        android:onClick="sendEmail"
        android:text="@string/contact"
        android:textSize="16sp" />


</LinearLayout>