<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChibingActivity">

    <ImageView
        android:id="@+id/wu_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/coach2" />

    <TextView
        android:id="@+id/wu_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:text="@string/chibing_wu"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="370dp">

        <TextView
            android:id="@+id/chibing_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/chibinwu_intro"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gray"
        android:onClick="sendEmail"
        android:text="@string/contact"
        android:textSize="16sp" />

</LinearLayout>